<resources>
    <!-- App base -->
    <string name="app_name">Поиск фильмов</string>

    <!-- Movies list -->
    <string name="rc_title">Список фильмов</string>
    <string name="favorite_button_text">Избранное</string>

    <!-- Favorite list -->
    <string name="toast_remove_favorite_text">Фильм удален из избранного</string>
    <string name="toast_add_favorite_text">Фильм добавлен в избранное</string>
    <string name="stub_text">Просмотр раздела возможен в платной версии приложения</string>

    <!-- Details screen -->
    <string name="like">Нравится</string>
    <string name="share_title">Пригласить друга</string>
    <string name="comment_title">Комментарий</string>
    <string name="invite_message">Приглашения для друга</string>
    <string name="invite_message_toast">Сообщение для тоста отправки</string>
    <string name="no_alert_answer">Нет</string>
    <string name="yes_alert_answer">Да</string>
    <string name="cancel_alert_answer">Отмена</string>
    <string name="not_save_data">Данные не сохранены</string>
    <string name="save_alert_title">Данные изменены</string>
    <string name="save_alert_text">Хотите сохранить данные?</string>

    <!-- Error -->
    <string name="not_found_error_title">Фильм не найден</string>
    <string name="limit_erorr_title">Лимит запросов превышен</string>
    <string name="other_erorr_title">Что-то пошло не так</string>
    <string name="internet_erorr_title">Ошибка интернета</string>
    <string name="retry_error_button">Повторить</string>

    <!-- Watch Later -->
    <string name="watch_later_dialog_message">Выберите дату напоминания</string>
    <string name="watch_later_dialog_hint">Дата</string>
    <string name="ok" translatable="false">OK</string>

    <!-- Notification Watch Later -->
    <string name="notification_title">Сейчас то самое время</string>
    <string name="notification_message">Время посмотреть фильм</string>
    <string name="time_placeholder" translatable="false">10</string>

    <string-array name="time_array">
        <item>Секунд</item>
        <item>Минут</item>
        <item>Часов</item>
    </string-array>
</resources>
