<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_android"
        android:drawablePadding="10dp"
        android:drawableTint="#070707"
        android:text="@string/save_alert_title"
        android:textAllCaps="false"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/save_alert_text"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@+id/dialog_title"
        app:layout_constraintRight_toRightOf="@+id/dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title" />

    <Button
        android:id="@+id/dialog_no_button"
        style="@style/AlertDialogButton"
        android:text="@string/no_alert_answer"
        android:backgroundTint="@color/purple_500"
        app:layout_constraintRight_toLeftOf="@id/dialog_yes_button"
        app:layout_constraintTop_toBottomOf="@+id/dialog_text" />

    <Button
        android:id="@+id/dialog_cancel_button"
        style="@style/AlertDialogButton"
        android:text="@string/cancel_alert_answer"
        android:backgroundTint="@color/purple_500"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_text" />

    <Button
        android:id="@+id/dialog_yes_button"
        style="@style/AlertDialogButton"
        android:backgroundTint="@color/teal_700"
        android:text="@string/yes_alert_answer"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_text" />

</androidx.constraintlayout.widget.ConstraintLayout>
